# compliance-assistant-with-agents

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.claude/: findings-2-r1.md  findings-2-r2.md  findings-3-r1.md  findings-3-r2.md  findings-4-r1.md  findings-4-r2.md  findings-4-r3.md  findings-5-r1.md  findings-5-r2.md  findings-6-c2-r3.md  prp-ralph.state.md  review-gate.config.json  review-gate.verdicts.json
.claude/PRPs/: compliance-prod-hardening.prd.md  portfolio-positioning.design.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
analysis/_legacy/: Automating regulatory compliance Agent.excalidraw  DEPLOYMENT_READINESS_REVIEW.md  README.md  a.md  agent-flow.excalidraw
docs/: SLOs.md  SYSTEM.md  demo-script.md  evals.md  live-launch.md  threat-model.md
docs/adr/: 0001-aurora-pgvector-over-opensearch.md  0002-agentcore-runtime-with-fargate-fallback.md  0003-agent-ids-via-ssm-not-env.md  0004-codex-authored-frozen-gold-set.md  0005-conditional-report-stages.md  0006-slos-md-single-source.md  0007-owner-acceptance-override.md  README.md
docs/analysis/: 2026-05-16-compliance-prod-readiness.md
docs/diagrams/: compliance-assistant-review-log.md  (+1 more)
infra/: README.md  app.py  cdk.json  conftest.py  requirements.txt
review_gate/: __init__.py  aggregate.py  cli.py  config.py  diff.py  mutation.py  prd.py  provenance.py  state.py
scripts/: install-git-hooks.ps1  run-quality-gate.ps1
tests/: test_agent_ids.py  test_citations.py  test_prod_readiness.py  test_redaction.py  test_startup.py  test_tracing.py
(+203 files in other folders)
