[project]
name = "compliance_assistant"
version = "0.1.0"
description = "compliance-assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "bandit>=1.8.3",
    "boto3>=1.37.6",
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
compliance_assistant = "compliance_assistant.main:run"
run_crew = "compliance_assistant.main:run"
train = "compliance_assistant.main:train"
replay = "compliance_assistant.main:replay"
test = "compliance_assistant.main:test"

[project.optional-dependencies]
# Build/test-time only. Kept out of the runtime closure so the crew
# never ships the CDK toolchain. Mirrors infra/requirements.txt.
infra = [
    "aws-cdk-lib>=2.254.0,<3.0.0",
    "constructs>=10.3.0,<11.0.0",
    "pytest>=8.0",
]
# Quality-gate tooling. Build/CI-time only; never in the runtime closure.
gate = [
    "mutmut==2.5.1",
    "pytest-cov>=5.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compliance_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests", "infra/tests"]
markers = [
    "gate: deterministic offline RAG eval gate (no AWS spend)",
    "live: opt-in; re-records raw fixtures via the real model",
]

[tool.crewai]
type = "crew"
